--- a/Mople/Resources/Localization/ko.lproj/Localizable.strings
+++ b/Mople/Resources/Localization/ko.lproj/Localizable.strings
@@ -87,6 +87,7 @@
 "meetdetail.plan_end" = "해당 약속은 마감되었어요";
 "meetdetail.Plan_join" = "약속 참여하기";
 "meetdetail.plan_leave" = "약속 불참";
+"meetdetail.invite" = "초대하기";
 
 // MARK: - Meet Detail Setup
 "meetdetail.setup" = "모임 설정";
@@ -96,7 +97,7 @@
 "meetdetail.delete_subinfo" = "해당 모임에 대한 모든 기록을 복구할 수 없어요";
 "meetdetail.leave" = "모임 나가기";
 "meetdetail.leave_info" = "모임을 나가시겠어요?";
-"meetdetail.invite" = "모플에서 초대된 모임을 확인해보세요!";
+"meetdetail.inviteMessage" = "모플에서 초대된 모임을 확인해보세요!";
 
 // MARK: - Post Detail
 "postdetail.plan" = "일정 상세";
